--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ group = mod_version
 version = mod_group_id
 
 base {
-    archivesName = mod_id
+    archivesName = "${mod_id}-${mod_version}"
 }
 
 java {
