--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ minecraft_version=1.19.2
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.19.2,1.20)
+minecraft_version_range=[1.19.2,)
 # The Forge version must agree with the Minecraft version to get a valid artifact
 forge_version=43.3.5
 # The Forge version range can use any version of Forge as bounds or match the loader version range
@@ -50,4 +50,4 @@ mod_group_id=com.miluum
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Miluum
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=A simple mod to add glowing tools, so you don't need to unequip your shield while mining! Requires DynamicLights Reforged.
