--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -61,3 +61,9 @@ description='''${mod_description}'''
    versionRange="${minecraft_version_range}"
    ordering="NONE"
    side="BOTH"
+[[dependencies.${mod_id}]]
+modId="dynamiclightsreforged"
+mandatory=true
+versionRange="1.4.0"
+ordering="NONE"
+side="BOTH"
