--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -63,7 +63,7 @@ description='''${mod_description}'''
    side="BOTH"
 [[dependencies.${mod_id}]]
 modId="dynamiclightsreforged"
-mandatory=true
+mandatory=false
 versionRange="1.4.0"
 ordering="NONE"
 side="BOTH"
